syntax = "proto3";

package pb;

import "user.proto";

option go_package = "github.com/DebdipWritesCode/MUN_Scoresheet/backend/pb";

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateUserResponse {
  User user = 1;
}